--- a/thankyou.html
+++ b/thankyou.html
@@ -1,32 +1,28 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>شكراً على طلبك</title>
+  <title>تم استلام طلبك بنجاح ✅</title>
+  <meta name="description" content="شكراً لثقتكم بنا. لقد استلمنا طلبكم وسيتم التواصل معكم في أقرب وقت لتأكيد التفاصيل.">
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      padding: 50px;
-      background: #f9f9f9;
-    }
-    .thankyou {
-      background: #fff;
-      padding: 40px;
-      border-radius: 12px;
-      box-shadow: 0 4px 12px rgba(0,0,0,0.1);
-      display: inline-block;
-    }
-    h1 {
-      color: #28a745;
-    }
+    body {font-family: Tahoma, Arial, sans-serif; background:#f9f9f9; color:#333; margin:0; padding:0; text-align:center;}
+    .container {max-width:600px; margin:50px auto; background:#fff; padding:30px; border-radius:10px; box-shadow:0 2px 6px rgba(0,0,0,0.1);}
+    h1 {color:#28a745; font-size:28px; margin-bottom:20px;}
+    p {font-size:18px; margin-bottom:15px;}
+    a.btn {display:inline-block; margin-top:20px; background:#28a745; color:#fff; padding:12px 25px; border-radius:6px; font-size:18px; text-decoration:none;}
+    a.btn:hover {background:#218838;}
   </style>
 </head>
 <body>
-  <div class="thankyou">
-    <h1>✅ شكراً على طلبك</h1>
-    <p>لقد استلمنا طلبك وسنتصل بك قريباً لتأكيد التفاصيل.</p>
+
+  <div class="container">
+    <h1>✅ شكراً لطلبك</h1>
+    <p>لقد استلمنا طلبك بنجاح.</p>
+    <p>سيتواصل معك فريقنا عبر الهاتف قريباً لتأكيد تفاصيل الطلبية والتوصيل.</p>
+    <p>نذكرك أن <strong>الدفع عند الاستلام</strong> وأن <strong>التوصيل مجاني عند شراء أكثر من عبوتين</strong>.</p>
+    <a href="index.html" class="btn">⬅️ العودة إلى الصفحة الرئيسية</a>
   </div>
+
 </body>
 </html>
