--- a/thankyou.html
+++ b/thankyou.html
@@ -1,24 +1,21 @@
 <!DOCTYPE html>
 <html lang="ar" dir="rtl">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
+<meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>شكراً — تم استلام طلبك</title>
 <style>
-  body{font-family:Arial, sans-serif;background:#07101a;color:#fff;display:flex;align-items:center;justify-content:center;height:100vh;margin:0}
-  .box{background:linear-gradient(180deg,#0b1620,#07101a);padding:28px;border-radius:12px;max-width:720px;text-align:center;box-shadow:0 20px 60px rgba(0,0,0,0.6)}
-  h1{margin:0 0 8px;font-size:24px;color:#f6c34b}
-  p{color:#bcd3de}
-  .btn{margin-top:14px;padding:10px 14px;border-radius:8px;background:#28a745;color:#fff;border:0;cursor:pointer;text-decoration:none}
+  body{margin:0;background:#0f1a12;color:#fff;font-family:Arial,Helvetica,sans-serif;display:flex;align-items:center;justify-content:center;height:100vh}
+  .box{background:linear-gradient(180deg,#16261a,#0f1910);padding:28px;border-radius:12px;text-align:center;max-width:720px;box-shadow:0 20px 50px rgba(0,0,0,0.6)}
+  h1{color:#d8a24a;margin:0 0 8px}
+  p{color:#bfc9be}
+  .btn{display:inline-block;margin-top:16px;padding:10px 16px;border-radius:8px;background:#2fb24a;color:#07101a;text-decoration:none;font-weight:700}
 </style>
 </head>
 <body>
   <div class="box">
-    <h1>شكراً! تم استلام طلبك</h1>
+    <h1>شكراً! طلبك تم استلامه</h1>
     <p>سيتواصل معك فريقنا قريباً لتأكيد الطلب وترتيب التوصيل. شكراً لثقتك في مناحل وعسل آل البوسعيدي.</p>
     <a class="btn" href="index.html">العودة للرئيسية</a>
   </div>
 </body>
 </html>
-
-
